# fantasy-hockey-agent

./: .env.example  .gitignore  README.md  fantasy_hockey_agent.py  fantasy_tools.py  pyproject.toml  requirements.txt
.claude/: project_directives.md
.github/workflows/: code-quality.yml  fantasy-hockey-analysis.yml
agents/: __init__.py  historical_analyst_agent.py  master_orchestrator.py  player_evaluator_agent.py  strategy_planner_agent.py
data/: player_id_mappings.json  recommendations_history.json
docs/: llamaindex-usage.md
docs/plans/: 2025-10-26-llamaindex-integration-design.md  2025-10-29-uv-migration-design.md  2025-10-29-uv-migration.md
indexing/: __init__.py  data_ingestion.py  document_loaders.py  vector_store_manager.py
models/: __init__.py  game.py  league.py  player.py  roster.py  schedule.py  streaming.py
modules/: __init__.py  agent_orchestrator.py  logger.py  message_handler.py  nhl_player_mapper.py  player_utils.py  prefetch_registry.py  rate_limiter.py  schedule_utils.py  system_prompt_builder.py  team_utils.py  tool_executor.py  tool_logger.py  yahoo_auth.py  yahoo_stats_fetcher.py  yahoo_utils.py
test_data/vector_db/: chroma.sqlite3
tests/: conftest.py  test_data_ingestion.py  test_document_loaders.py  test_historical_analyst_agent.py  test_integration_llamaindex.py  test_llama_tools.py  test_master_orchestrator.py  test_player_evaluator_agent.py  test_strategy_planner_agent.py  test_vector_store_manager.py
tools/: assess_droppable_players.py  base_tool.py  calculate_optimal_streaming.py  find_streaming_matches.py  get_available_players.py  get_player_stats.py  get_players_from_teams.py  get_recommendation_history.py  get_roster.py  get_team_schedule.py  llama_tools.py  save_recommendations.py  send_email.py
