[project]
name = "fantasy-hockey-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yfpy>=17.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.39.0",
    "nhl-api-py>=1.0.0",
    "llama-index-core>=0.13.0",
    "llama-index-llms-anthropic>=0.8.0",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "chromadb>=0.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
]

# Set the maximum line length
line-length = 100

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]

# Ignore specific rules if needed
ignore = [
    "E501",  # Line too long (handled by formatter)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["fantasy_hockey_agent", "fantasy_tools", "modules", "tools"]
